--- a/notebook/mobile_gripper_kinematics.ipynb
+++ b/notebook/mobile_gripper_kinematics.ipynb
@@ -9,21 +9,14 @@
     "import sympy\n",
     "from IPython.display import display\n",
     "\n",
-    "from kdl_sympy.frames import Vector, Rotation, Frame"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from kdl_sympy.frames import Vector, Frame\n",
+    "\n",
     "sympy.init_printing()  # display()でキレイに表示されるようになる"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
